@@ -12,7 +12,8 @@ class Applicant < ActiveRecord::Base
                   :middle_initial, :notes, :offered, :phone, :preferred_preceptor_id, :presentations, :previous_institutions, :primary_preceptor_id, :pubs_not_prev_rep, :research_description,
                   :research_project_title, :residency, :review_date, :reviewed, :secondary_preceptor_id, :source_of_support, :state, :status, :supported_by_tg, :training_grant_years, :tge, :thesis,
                   :trainee_code, :training_period_end_date, :training_period_start_date, :urm, :year, :year_department_program, :zip_code, :desired_start_date, :marital_status, :assurance, :reference_number,
-                  :personal_statement, :publish, :curriculum_vitae, :curriculum_vitae_uploaded_at, :curriculum_vitae_cache, :disabled_description, :preferred_preceptor_two_id, :preferred_preceptor_three_id
+                  :personal_statement, :publish, :curriculum_vitae, :curriculum_vitae_uploaded_at, :curriculum_vitae_cache, :disabled_description, :preferred_preceptor_two_id, :preferred_preceptor_three_id,
+                  :previous_nsra_support
 
   attr_accessor :publish
 
@@ -34,7 +35,9 @@ class Applicant < ActiveRecord::Base
   validates_uniqueness_of :reference_number, allow_blank: true, allow_nil: true
   validates_uniqueness_of :email, allow_blank: true, scope: :deleted
 
-  validates_presence_of :expected_year, unless: [:postdoc?, :not_submitted?]
+  validates_presence_of :expected_year, :degree_sought, unless: [:postdoc?, :not_submitted?]
+  validates_presence_of :desired_start_date, :personal_statement, :curriculum_vitae, :current_institution, :degrees, :current_title, :preferred_preceptor_id, :previous_institutions, :marital_status, :phone, :address1, :city, :state, :country, :zip_code, :advisor, :concentration_major, :department_program, if: :submitted?
+  validates_presence_of :disabled_description, if: [:submitted?, :disabled?]
 
   # Model Relationships
   belongs_to :preferred_preceptor, class_name: 'Preceptor', foreign_key: 'preferred_preceptor_id'
@@ -48,6 +51,10 @@ class Applicant < ActiveRecord::Base
   def postdoc?
     self.applicant_type == 'postdoc'
   end
+
+  # def predoc_or_summer?
+  #   ['predoc', 'summer'].include?(self.applicant_type)
+  # end
 
   def trainee?
     self.enrolled?
@@ -84,7 +91,10 @@ class Applicant < ActiveRecord::Base
   end
 
   def set_submitted_at
-    self.submitted_at = Time.now if self.respond_to?('submitted_at') and self.publish.to_s == '1' and self.submitted_at.blank?
+    if self.respond_to?('submitted_at') and self.submitted_at.blank? and self.publish.to_s == '1'
+      self.submitted_at = Time.now
+      self.originally_submitted_at = self.submitted_at if self.respond_to?('originally_submitted_at') and self.originally_submitted_at.blank?
+    end
   end
 
   def set_reference_number(new_reference_number = Digest::SHA1.hexdigest(Time.now.usec.to_s))
