@@ -3,44 +3,44 @@
 </div>
 
 <div class="control-group">
-  <%= f.label :phone, class: 'control-label' %>
+  <%= f.label :phone, nil, class: 'control-label' %>
   <div class="controls">
     <%= f.text_field :phone %>
   </div>
 </div>
 
 <div class="control-group">
-  <%= f.label :address1, class: 'control-label' %>
+  <%= f.label :address1, nil, class: 'control-label' %>
   <div class="controls">
     <%= f.text_field :address1 %>
   </div>
 </div>
 <div class="control-group">
-  <%= f.label :address2, class: 'control-label' %>
+  <%= f.label :address2, nil, class: 'control-label' %>
   <div class="controls">
     <%= f.text_field :address2 %>
   </div>
 </div>
 <div class="control-group">
-  <%= f.label :city, class: 'control-label' %>
+  <%= f.label :city, nil, class: 'control-label' %>
   <div class="controls">
     <%= f.text_field :city %>
   </div>
 </div>
 <div class="control-group">
-  <%= f.label :state, class: 'control-label' %>
+  <%= f.label :state, nil, class: 'control-label' %>
   <div class="controls">
     <%= f.text_field :state %>
   </div>
 </div>
 <div class="control-group">
-  <%= f.label :country, class: 'control-label' %>
+  <%= f.label :country, nil, class: 'control-label' %>
   <div class="controls">
     <%= f.text_field :country %>
   </div>
 </div>
 <div class="control-group">
-  <%= f.label :zip_code, class: 'control-label' %>
+  <%= f.label :zip_code, nil, class: 'control-label' %>
   <div class="controls">
     <%= f.text_field :zip_code %>
   </div>
