@@ -6,6 +6,11 @@
     <%= link_to "Delete Applicant", @applicant, confirm: "Are you sure you want to delete Applicant #{@applicant.name}?", method: :delete, class: 'btn btn-mini btn-danger' %>
     <%= link_to "View Applicants", applicants_path, class: 'btn btn-mini' %>
     <%= link_to "Email Applicant Link", email_applicant_path(@applicant), method: :post, class: 'btn btn-mini' %>
+    <% if @applicant.submitted_at.blank? %>
+      <span class="label label-warning">Draft</span>
+    <% else %>
+      <%= link_to "Allow Applicant to Resubmit", unlock_applicant_path(@applicant), method: :post, class: 'btn btn-mini' %>
+    <% end %>
   </h1>
 </div>
 
